--- a/package.json
+++ b/package.json
@@ -5,19 +5,30 @@
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "expo": "~37.0.3",
     "expo-updates": "~0.1.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.11",
+    "ngrok": "^3.2.7",
+    "nodemon": "^2.0.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-material-textfield": "^0.16.1",
     "react-native-reanimated": "~1.7.0",
+    "react-native-router-flux": "^4.2.0",
     "react-native-screens": "~2.2.0",
     "react-native-unimodules": "~0.9.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "s": "^1.0.0",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
